--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk android:minSdkVersion="10" />
 
     <application
-        android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/MyLightTheme.NoShadow" >
+        android:name=".RetroGamesApplication"
+        android:icon="@drawable/icon" 
+        android:label="@string/app_name" 
+        android:theme="@style/MyLightTheme.NoShadow" >
         <activity
             android:name=".RetroGamesActivity"
             android:label="@string/app_name"
