--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".SIHistoryActivity"></activity>
         <activity android:name=".PongStatsActivity"></activity>
         <activity android:name=".SIStatsActivity"></activity>
+        <activity android:name=".PongActivity"></activity>
     </application>
 
 </manifest>
